# pythonbeid-server

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: release-windows.yml
eid_agent/: __main__.py  app.py  config.py  errors.py  reader.py  security.py  tray.py
examples/web/: index.html
packaging/: build.ps1  eid-agent.iss  eid_agent_tray.spec  make_icon.py  tray_launcher.py
tests/: test_api.py  test_reader_backend.py  test_tray.py
